# sonar-test-github

./: CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: sonarcloud-linux.yml  sonarcloud-macos.yml  sonarcloud-windows.yml
include/: common.h
src/: CMakeLists.txt  main.c  posix.c  win32.c
